# minime

./: .snyk  README.md
.github/workflows/: pipeline.yml
backend/: build.sh  pyproject.toml
backend/app/: chat.py  chat_handler.py  chat_orchestrator.py  conversation_store.py  conversation_summary_handler.py  google_calendar.py  ip_geolocation_handler.py  llm_provider.py  memory.py  notion_script.py  prompts.py  rag.py  token_bucket.py  tracing.py  tracing_utils.py  types.py  vector_store.py
backend/app/agents/: chat_agent.py  prompts.py
backend/app/components/: pinecone_retriever.py  rag_query_rewriter.py
backend/app/knowledge/: rag.py  vector_store.py
backend/app/memory/: conversation_store.py  memory.py
backend/app/services/: ip_geolocation.py  notifications.py
backend/app/tools/: __init__.py  scheduler.py  search_docs.py  time.py  user_info.py
backend/app/utils/: email.py  error_messages.py  ip_geolocation.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/: Bubbles.jsx  ChatInput.jsx  ErrorBanner.jsx  FlyingLogos.jsx  Hero.jsx  MarkdownTypewriter.jsx  Mermaid.jsx  PromptMarquee.jsx  RollingPrompts.jsx  SocialNetworkBadge.jsx  SplitText.jsx
infrastructure/: apig.tf  dynamo.tf  eventbridge.tf  frontend.tf  lambda.tf  outputs.tf  providers.tf  route53.tf  ses.tf  sqs.tf  variables.tf
